# MBA_AF_620_Project_2

./: README.md  home_depot_milestone2.xlsx  milestone2.py  pyproject.toml
mba_af_620_project_2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
